Fix static content image links

--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -26,6 +26,7 @@
         type="text/javascript">var style_group = "ws_style", cssVersion = 699, jsVersion = 1051, comlen = 2000, maxFilesize = 4194304, maxLines = 100, clickable_ids = 1, cooldowns = { "thread": 600, "reply": 60, "image": 60 }; var maxWebmFilesize = 3145728; var board_archived = true; var sjis_tags = true; var spoilers = true; var check_for_block = 1;</script>
     <script type="text/javascript" data-cfasync="false" src="//s.4cdn.org/js/core.min.1066.js"></script>
     <script type="text/javascript" data-cfasync="false" src="//s.4cdn.org/js/extension.min.1131.js"></script>-->
+    <script type="text/javascript" data-cfasync="false" src="/static/js/extension.js"></script>
     <noscript>
         <style type="text/css">
             #postForm {
