Fix extension errors

--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -22,11 +22,16 @@
     <link rel="canonical" href="/{{op.board}}/thread/{{op.no}}/{{op.semantic_url}}">
     <!-- <link rel="alternate" title="RSS feed" href="/{{op.board}}/index.rss" type="application/rss+xml"> -->
     <title>/{{op.board}}/ - {{op.com}} - Mitsuba Archive</title>
-    <!-- <script
-        type="text/javascript">var style_group = "ws_style", cssVersion = 699, jsVersion = 1051, comlen = 2000, maxFilesize = 4194304, maxLines = 100, clickable_ids = 1, cooldowns = { "thread": 600, "reply": 60, "image": 60 }; var maxWebmFilesize = 3145728; var board_archived = true; var sjis_tags = true; var spoilers = true; var check_for_block = 1;</script>
-    <script type="text/javascript" data-cfasync="false" src="//s.4cdn.org/js/core.min.1066.js"></script>
-    <script type="text/javascript" data-cfasync="false" src="//s.4cdn.org/js/extension.min.1131.js"></script>-->
+
+    <script type="text/javascript">
+        var mitsuba_board = "{{op.board}}";
+
+        var style_group = "ws_style", cssVersion = 699, jsVersion = 1051, comlen = 2000, maxFilesize = 4194304, maxLines = 100, 
+        clickable_ids = 1, cooldowns = { "thread": 600, "reply": 60, "image": 60 }; var maxWebmFilesize = 3145728; 
+        var board_archived = true; var sjis_tags = true; var spoilers = true; var check_for_block = 1;</script>
+    <script type="text/javascript" data-cfasync="false" src="/static/js/core.1066.js"></script>
     <script type="text/javascript" data-cfasync="false" src="/static/js/extension.js"></script>
+    
     <noscript>
         <style type="text/css">
             #postForm {
@@ -64,26 +69,26 @@
                             <span class="nameBlock">
                                 <span class="name">{{op.name}}</span><br><span class="subject">{{op.sub}}</span> 
                             </span>
-                            <span class="dateTime postNum" data-utc="{{op.time}}">{{op.now}} <a href="#p{{op.no}}" title="Link to this post">No.</a><a href="javascript:quote('{{op.no}}');" title="Reply to this post">{{op.no}}</a>
+                            <span class="dateTime postNum" data-utc="{{op.time}}">{{op.now}} <a href="#p{{op.no}}" title="Link to this post">No.</a><a href="#p{{op.no}}" title="Reply to this post">{{op.no}}</a>
                             </span>
                         </div>
                         <div class="file" id="f{{op.no}}">
                             <div class="fileText" id="fT{{op.no}}">File: 
                                 <a href="//i.4cdn.org/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank">{{op.filename}}{{op.ext}}</a> ({{op.fsize}} B, {{op.w}}x{{op.h}})
                             </div>
-                            <a class="fileThumb" href="//i.4cdn.org/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank">
-                                <img src="//i.4cdn.org/{{op.board}}/{{op.tim}}s.jpg" alt="{{op.fsize}} B" data-md5="{{op.md5}}" 
+                            <a class="fileThumb" href="//i.4cdn.org/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank"><img src="//i.4cdn.org/{{op.board}}/{{op.tim}}s.jpg" 
+                                alt="{{op.fsize}} B" data-md5="{{op.md5}}" 
                                 style="height: {{op.tn_h}}px; width: {{op.tn_w}}px;" loading="lazy">
                                 <div data-tip data-tip-cb="mShowFull" class="mFileInfo mobile">{{op.fsize}} B PNG</div>
                             </a>
                         </div>
                         <div class="postInfo desktop" id="pi{{op.no}}"><input type="checkbox" name="{{op.no}}" value="delete">
-                            <span class="subject"></span>
+                            <span class="subject">{{op.sub}}</span>
                             <span class="nameBlock">
                                 <span class="name">{{op.name}}</span>
                             </span>
                             <span class="dateTime" data-utc="{{op.time}}">{{op.now}}</span>
-                            <span class="postNum desktop"><a href="#p{{op.no}}" title="Link to this post">No.</a><a href="javascript:quote('{{op.no}}');" title="Reply to this post">{{op.no}}</a>
+                            <span class="postNum desktop"><a href="#p{{op.no}}" title="Link to this post">No.</a><a href="#p{{op.no}}" title="Reply to this post">{{op.no}}</a>
                             </span>
                         </div>
                         <blockquote class="postMessage" id="m{{op.no}}">{{{op.com}}}</blockquote>
@@ -97,7 +102,7 @@
                         <div class="postInfoM mobile" id="pim{{this.no}}"> 
                             <span class="nameBlock"><span class="name">{{this.name}}</span><br></span>
                             <span class="dateTime postNum" data-utc="{{this.time}}">
-                                {{this.now}}<a href="#p{{this.no}}" title="Link to this post">No.</a><a href="javascript:quote('{{this.no}}');" title="Reply to this post">{{this.no}}</a>
+                                {{this.now}}<a href="#p{{this.no}}" title="Link to this post">No.</a><a href="#p{{this.no}}" title="Reply to this post">{{this.no}}</a>
                             </span>
                         </div>
                         <div class="postInfo desktop" id="pi{{this.no}}">
@@ -105,7 +110,7 @@
                             <span class="nameBlock"><span class="name">{{this.name}}</span> </span> 
                             <span class="dateTime" data-utc="{{this.time}}">{{this.now}}</span> 
                             <span class="postNum desktop">
-                                <a href="#p{{this.no}}" title="Link to this post">No.</a><a href="javascript:quote('{{this.no}}');" title="Reply to this post">{{this.no}}</a>
+                                <a href="#p{{this.no}}" title="Link to this post">No.</a><a href="#p{{this.no}}" title="Reply to this post">{{this.no}}</a>
                             </span>
                         </div>
                         {{#if this.tim}}
@@ -114,8 +119,8 @@
                                 File: <a href="/{{this.board}}/{{this.tim}}{{this.ext}}" target="_blank">{{this.filename}}{{this.ext}}</a>
                                  ({{this.fsize}} B, {{this.w}}x{{this.h}})
                             </div>
-                            <a class="fileThumb" href="/{{this.board}}/{{this.tim}}{{this.ext}}" target="_blank">
-                                <img src="/{{this.board}}/{{this.tim}}s.jpg" 
+                            <a class="fileThumb" href="/{{this.board}}/{{this.tim}}{{this.ext}}" 
+                            target="_blank"><img src="/{{this.board}}/{{this.tim}}s.jpg" 
                                     alt="{{this.fsize}} B" 
                                     data-md5="{{this.md5}}" 
                                     style="height: {{this.tn_h}}px; width: {{this.tn_w}}px;" 
