Improve thread headers

--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -56,14 +56,19 @@
     <div id="boardNavMobile" class="mobile">
         <div class="boardSelect"> <strong>Board</strong> <select id="boardSelectMobile"></select> </div>
         <div class="pageJump"> <a href="#bottom">&#9660;</a> <a href="javascript:void(0);"
-                id="settingsWindowLinkMobile">Settings</a> <a href="//p.4chan.org/">Mobile</a> <a
-                href="//www.4channel.org" target="_top">Home</a> </div>
+                id="settingsWindowLinkMobile">Settings</a> <a
+                href="/" target="_top">Home</a> </div>
+    </div>
+    <div class="boardBanner">
+        <div id="bannerCnt" class="title desktop" data-src="1.png"></div>
+        <div class="boardTitle">/{{op.board}}/ - Mitsuba Archive</div>
     </div>
 
 
     <hr class="desktop" id="op">
     <div class="navLinks desktop">[<a href="/{{op.board}}/" accesskey="a">Return</a>] [<a href="/{{op.board}}/catalog">Catalog</a>] [<a
-            href="#bottom">Bottom</a>]</div>
+            href="#bottom">Bottom</a>]<div class="thread-stats"><span class="ts-replies" data-tip="Replies">{{op.replies}}</span> / <span class="ts-images" data-tip="Images">{{op.images}}</span> / <span data-tip="Posters" class="ts-ips">{{op.unique_ips}}</span></div>
+        </div>
     <hr>
     <form name="delform" id="delform" method="post">
         <div class="board">
