--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -73,71 +73,9 @@
     <form name="delform" id="delform" method="post">
         <div class="board">
             <div class="thread" id="t{{op.no}}">
-                <div class="postContainer opContainer" id="pc{{op.no}}">
-                    <div id="p{{op.no}}" class="post op">
-                        <div class="postInfoM mobile" id="pim{{op.no}}">
-                            <span class="nameBlock {{#if op.capcode}}capcodeMod{{/if}}">
-                                <span class="name">{{op.name}}</span>{{#if op.trip}}<span class="postertrip"> {{op.trip}}</span>{{/if}}{{#unless op.capcode}}{{#if op.id}} <span class="posteruid id_{{op.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color op.id}}">{{op.id}}</span>)</span>{{/if}}{{/unless}}{{#if op.capcode}}<strong class="capcode hand id_mod" title="Highlight posts by Moderators">## {{op.id}}</strong> <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina">{{/if}} {{#if op.since4pass}} <span title="Pass user since {{op.since4pass}}" class="n-pu"></span>{{/if}}<br><span class="subject">{{op.sub}}</span> </span><span class="dateTime postNum" data-utc="{{op.time}}">{{op.now}} <a href="#p{{op.no}}" title="Link to this post">No.</a><a href="#p{{op.no}}" title="Reply to this post">{{op.no}}</a>
-                            </span>
-                        </div>
-                        <div class="file" id="f{{op.no}}">
-                            <div class="fileText" id="fT{{op.no}}" {{#if op.spoiler}}title="{{shorten 25 op.filename}}{{op.ext}}"{{/if}}>File: 
-                                <a href="/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank">{{#unless op.spoiler}}{{shorten 25 op.filename}}{{op.ext}}{{else}}Spoiler Image{{/unless}}</a> ({{b_to_kb op.fsize}} KB, {{op.w}}x{{op.h}})
-                            </div>
-                            <a class="fileThumb{{#if op.spoiler}} imgspoiler{{/if}}" href="/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank">{{#unless op.spoiler}}<img src="/{{op.board}}/{{op.tim}}s.jpg" 
-                                alt="{{b_to_kb op.fsize}} KB" data-md5="{{op.md5}}" 
-                                style="height: {{op.tn_h}}px; width: {{op.tn_w}}px;" loading="lazy">{{else}}<img src="/static/image/spoiler.png" 
-                                alt="{{b_to_kb op.fsize}} KB" data-md5="{{op.md5}}" 
-                                style="height: 100px; width: 100px;" loading="lazy">{{/unless}}
-                                <div data-tip data-tip-cb="mShowFull" class="mFileInfo mobile">{{b_to_kb op.fsize}} KB PNG</div>
-                            </a>
-                        </div>
-                        <div class="postInfo desktop" id="pi{{op.no}}"><input type="checkbox" name="{{op.no}}" value="delete">
-                            <span class="subject">{{op.sub}}</span>
-                            <span class="nameBlock {{#if op.capcode}}capcodeMod{{/if}}"><span class="name">{{op.name}}</span> {{#if op.trip}}<span class="postertrip">{{op.trip}}</span>{{/if}}{{#unless op.capcode}}{{#if op.id}} <span class="posteruid id_{{op.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color op.id}}">{{op.id}}</span>)</span>{{/if}}{{/unless}}{{#if op.capcode}} <strong class="capcode hand id_mod" title="Highlight posts by Moderators">## {{op.id}}</strong> <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina">{{/if}}{{#if op.since4pass}} <span title="Pass user since {{op.since4pass}}" class="n-pu"></span>{{/if}}</span>
-                            <span class="dateTime" data-utc="{{op.time}}">{{op.now}}</span>
-                            <span class="postNum desktop"><a href="#p{{op.no}}" title="Link to this post">No.</a><a href="#p{{op.no}}" title="Reply to this post">{{op.no}}</a>
-                            </span>
-                        </div>
-                        <blockquote class="postMessage" id="m{{op.no}}">{{this.capcode}}{{{op.com}}}</blockquote>
-                    </div>
-                </div>
+                {{> op_post}}
                 {{#each posts}}
-                <div class="postContainer replyContainer" id="pc{{this.no}}">
-                    <div class="sideArrows" id="sa{{this.no}}">&gt;&gt;</div>
-
-                    <div id="p{{this.no}}" class="post reply">
-                        <div class="postInfoM mobile" id="pim{{this.no}}"> 
-                            <span class="nameBlock {{#if this.capcode}}capcodeMod{{/if}}"><span class="name {{#if this.capcode}}capcode{{/if}}">{{this.name}}</span>{{#if this.trip}}<span class="postertrip"> {{this.trip}}</span>{{/if}}{{#unless this.capcode}}{{#if this.id}} <span class="posteruid id_{{this.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color this.id}}">{{this.id}}</span>)</span>{{/if}}{{/unless}} {{#if this.capcode}}<strong class="capcode hand id_{{this.capcode}}" title="Highlight posts by Moderators">## {{this.id}}</strong> <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina">{{/if}}{{#if this.since4pass}} <span title="Pass user since {{this.since4pass}}" class="n-pu"></span>{{/if}}<br></span>
-                            <span class="dateTime postNum" data-utc="{{this.time}}">{{this.now}}<a href="#p{{this.no}}" title="Link to this post">No.</a><a href="#p{{this.no}}" title="Reply to this post">{{this.no}}</a></span>
-                        </div>
-                        <div class="postInfo desktop" id="pi{{this.no}}">
-                            <input type="checkbox" name="{{this.no}}" value="delete">
-                            <span class="nameBlock {{#if this.capcode}}capcodeMod{{/if}}"><span class="name {{#if this.capcode}}capcode{{/if}}">{{this.name}}</span>{{#if this.trip}}<span class="postertrip"> {{this.trip}}</span>{{/if}}{{#unless this.capcode}}{{#if this.id}} <span class="posteruid id_{{this.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color this.id}}">{{this.id}}</span>)</span>{{/if}}{{/unless}} {{#if this.capcode}}<strong class="capcode hand id_{{this.capcode}}" title="Highlight posts by Moderators">## {{this.id}}</strong> <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina">{{/if}}{{#if this.since4pass}}<span title="Pass user since {{this.since4pass}}" class="n-pu"></span> {{/if}}</span> 
-                            <span class="dateTime" data-utc="{{this.time}}">{{this.now}}</span> 
-                            <span class="postNum desktop"><a href="#p{{this.no}}" title="Link to this post">No.</a><a href="#p{{this.no}}" title="Reply to this post">{{this.no}}</a></span>
-                        </div>
-                        {{#if this.tim}}
-                        <div class="file" id="f{{this.no}}">
-                            <div class="fileText" id="fT{{this.no}}" {{#if this.spoiler}}title="{{shorten 25 this.filename}}{{this.ext}}"{{/if}}>File: 
-                                <a href="/{{this.board}}/{{this.tim}}{{this.ext}}" target="_blank">{{#unless this.spoiler}}{{shorten 25 this.filename}}{{this.ext}}{{else}}Spoiler Image{{/unless}}</a> ({{b_to_kb this.fsize}} KB, {{this.w}}x{{this.h}})
-                            </div>
-                            <a class="fileThumb{{#if this.spoiler}} imgspoiler{{/if}}" href="/{{this.board}}/{{this.tim}}{{this.ext}}" 
-                            target="_blank">{{#unless this.spoiler}}<img src="/{{this.board}}/{{this.tim}}s.jpg" 
-                            alt="{{b_to_kb this.fsize}} KB" data-md5="{{this.md5}}" 
-                            style="height: {{this.tn_h}}px; width: {{this.tn_w}}px;" loading="lazy">{{else}}<img src="/static/image/spoiler.png" 
-                            alt="{{b_to_kb this.fsize}} KB" data-md5="{{this.md5}}" 
-                            style="height: 100px; width: 100px;" loading="lazy">{{/unless}}
-
-                                <div data-tip data-tip-cb="mShowFull" class="mFileInfo mobile">{{b_to_kb this.fsize}} KB {{this.ext}}</div>
-                            </a>
-                        </div>
-                        {{/if}}
-                        <blockquote class="postMessage" id="m{{this.no}}">
-                            {{{this.com}}}
-                        </blockquote>
-                    </div>
-                </div>
+                {{> post}}
                 {{/each}}
             </div>
             <hr>
