--- a/src/templates/op_post.html
+++ b/src/templates/op_post.html
@@ -5,18 +5,7 @@
                 <span class="name">{{op.name}}</span>{{#if op.trip}}<span class="postertrip"> {{op.trip}}</span>{{/if}}{{#unless op.capcode}}{{#if op.id}} <span class="posteruid id_{{op.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color op.id}}">{{op.id}}</span>)</span>{{/if}}{{/unless}}{{#if op.capcode}}<strong class="capcode hand id_mod" title="Highlight posts by Moderators">## {{op.id}}</strong> <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina">{{/if}} {{#if op.since4pass}} <span title="Pass user since {{op.since4pass}}" class="n-pu"></span>{{/if}}<br><span class="subject">{{op.sub}}</span> </span><span class="dateTime postNum" data-utc="{{op.time}}">{{op.now}} <a href="#p{{op.no}}" title="Link to this post">No.</a><a href="#p{{op.no}}" title="Reply to this post">{{op.no}}</a>
             </span>
         </div>
-        <div class="file" id="f{{op.no}}">
-            <div class="fileText" id="fT{{op.no}}" {{#if op.spoiler}}title="{{shorten 25 op.filename}}{{op.ext}}"{{/if}}>File: 
-                <a href="/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank">{{#unless op.spoiler}}{{shorten 25 op.filename}}{{op.ext}}{{else}}Spoiler Image{{/unless}}</a> ({{b_to_kb op.fsize}} KB, {{op.w}}x{{op.h}})
-            </div>
-            <a class="fileThumb{{#if op.spoiler}} imgspoiler{{/if}}" href="/{{op.board}}/{{op.tim}}{{op.ext}}" target="_blank">{{#unless op.spoiler}}<img src="/{{op.board}}/{{op.tim}}s.jpg" 
-                alt="{{b_to_kb op.fsize}} KB" data-md5="{{op.md5}}" 
-                style="height: {{op.tn_h}}px; width: {{op.tn_w}}px;" loading="lazy">{{else}}<img src="/static/image/spoiler.png" 
-                alt="{{b_to_kb op.fsize}} KB" data-md5="{{op.md5}}" 
-                style="height: 100px; width: 100px;" loading="lazy">{{/unless}}
-                <div data-tip data-tip-cb="mShowFull" class="mFileInfo mobile">{{b_to_kb op.fsize}} KB PNG</div>
-            </a>
-        </div>
+        {{> post_file op}}
         <div class="postInfo desktop" id="pi{{op.no}}"><input type="checkbox" name="{{op.no}}" value="delete">
             <span class="subject">{{op.sub}}</span>
             <span class="nameBlock {{#if op.capcode}}capcodeMod{{/if}}"><span class="name">{{op.name}}</span> {{#if op.trip}}<span class="postertrip">{{op.trip}}</span>{{/if}}{{#unless op.capcode}}{{#if op.id}} <span class="posteruid id_{{op.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color op.id}}">{{op.id}}</span>)</span>{{/if}}{{/unless}}{{#if op.capcode}} <strong class="capcode hand id_mod" title="Highlight posts by Moderators">## {{op.id}}</strong> <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina">{{/if}}{{#if op.since4pass}} <span title="Pass user since {{op.since4pass}}" class="n-pu"></span>{{/if}}</span>
